--- a/LabBook.org
+++ b/LabBook.org
@@ -12,34 +12,18 @@
 Esse documento está em pt-br
 
 * [00:18:39; 02.07.2016] Tarefas da Primeira Reunião com o Professor Lucas :Gabriel:
-** STARTED Principais trabalhos relacionados - Artigo do Luis Felipe
-- State "STARTED"    from              [2016-08-03 Qua 00:34]
-|------------+-----------------------+----------------------------------+---------------------------------------------+----------------------+----------------------------------+-------------------------------------+----------------------|
-| Autores    | Titulo                | Objetivo                         | Metodologia                                 | Benchmark,           | Resultados                       | Observaçao                          | Diferença            |
-|            |                       |                                  |                                             | Ferramenta ou        |                                  |                                     | do nosso trabalho    |
-|            |                       |                                  |                                             | Tecnologia           |                                  |                                     |                      |
-|------------+-----------------------+----------------------------------+---------------------------------------------+----------------------+----------------------------------+-------------------------------------+----------------------|
-| Laurenzano |                       |                                  |                                             |                      | - Os principais                  | - O autor nao chega a definir,      | - Foco em aplicaçoes |
-| et al.     | =Reducing energy usage= | - Abordagem que permite          | - Instrumentaçao realizada                  | - Benchmark          | resultados adquiridos            | mas menciona que uma aplicaçao      | paralelas (OpenMP)   |
-|            | =with memory and=       | selecionar *por laço* a melhor     | atraves da utilizaçao da                    | proprio: =pcubed=      | pelos autores foi a              | =memory-bound= depende primeiramente  | - Regiao paralelas   |
-|            | =computation-aware=     | frequencia de clock.             | ferramenta PEBIL toolkit                    | (PMaC's Performance  | economia de cerca                | da proximidade, tamanho e do        | dentro da abordagem  |
-|            | =dynamic frequency=     | O criterio de frequencia mais    | - Uso da biblioteca cpu-freq                | and Power benchmark) | de 7,6% de energia para          | Speedup disponivel com as operaçoes | fork-join            |
-|            | =scaling=               | adequada esta entre desempenho e | para alterar a frequencia                   |                      | a primeira plataforma de         | sob a memoria.                      |                      |
-|            |                       | consumo de energia               | do processador                              |                      | execuçao (Intel Xeon E5530)      |                                     |                      |
-|            |                       |                                  | - Experimento: os paramentos                |                      | e para a segunda plataforma      |                                     |                      |
-|            |                       |                                  | levados em consideraçao para                |                      | (AMD Opteron 8380) cerca         |                                     |                      |
-|            |                       |                                  | aplicaçao sao: taxa de hit                  |                      | de 10,6%.                        |                                     |                      |
-|            |                       |                                  | dos diferentes niveis de cache,             |                      | - Vale lembrar, que esses        |                                     |                      |
-|            |                       |                                  | operaçoes de ponto-flutuante (FP) para      |                      | ganhos usando DVFS puramente     |                                     |                      |
-|            |                       |                                  | operaçoes de memoria e a media              |                      | de maneira consciente (a partir  |                                     |                      |
-|            |                       |                                  | da computaçao de operaçoes em FP            |                      | do conhecimento do comportamento |                                     |                      |
-|            |                       |                                  | e inteiro.                                  |                      | da aplicaçao)                    |                                     |                      |
-|            |                       |                                  | - A plataforma de execuçao escolhida        |                      |                                  |                                     |                      |
-|            |                       |                                  | por eles *permite a alteraçao da frequencia*  |                      |                                  |                                     |                      |
-|            |                       |                                  | *independentemente de cada core* (frequencias |                      |                                  |                                     |                      |
-|            |                       |                                  | avaliadas 1.60, 1.73, 1.86, 2, 2.13, 2.26,  |                      |                                  |                                     |                      |
-|            |                       |                                  | 2.39 ou 2.40 GHz)                           |                      |                                  |                                     |                      |
-|------------+-----------------------+----------------------------------+---------------------------------------------+----------------------+----------------------------------+-------------------------------------+----------------------|
+** Principais trabalhos relacionados - Artigo do Luis Felipe
+
+|-------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------|
+| Autores           | Título                                                                                            | Objetivo                                                                                                                                                     | Metodologia                                                                                                                                                                                                                 | Benchmark,                                                         | Resultados                                                                                                                                                                                                              | Observação                                                                                                                                                                       | Diferença                                         |
+|                   |                                                                                                   |                                                                                                                                                              |                                                                                                                                                                                                                             | Ferramenta ou                                                      |                                                                                                                                                                                                                         |                                                                                                                                                                                  | do nosso trabalho                                 |
+|                   |                                                                                                   |                                                                                                                                                              |                                                                                                                                                                                                                             | Tecnologia                                                         |                                                                                                                                                                                                                         |                                                                                                                                                                                  |                                                   |
+|-------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------|
+| Laurenzano et al. | =Reducing energy usage with memory and with memory and computation-aware dynamic frequency scaling= | - Abordagem que permite selecionar *por laço* a melhor frequência de clock. O critério de frequência mais adequado está entre desempenho e consumo de energia. | - Instrumentação realizada através da utilização da ferramenta PEBIL toolkit                                                                                                                                                | - Benchmark própio =pcubed= (PMaC's Performance and Power benchmark) | - Os principais resultados adquiridos pelos autores foi a economia de cerca de 7,6% de energia para a primeira plataforma de execução (Intel Xeon E5530) e para a segunda plataforma (AMD Opteron 8380) cerca de 10,6%. | - O autor não chega a definir, mas menciona que uma aplicação =memory-bound= depende primeiramente da proximidade, tamanho e do Speedup disponível com as operaçoes sob a memoria. | - Foco em aplicações paralelas (OpenMP)           |
+|                   |                                                                                                   |                                                                                                                                                              | - Uso da biblioteca cpu-freq para alterar a frequência do processador                                                                                                                                                       |                                                                    |                                                                                                                                                                                                                         |                                                                                                                                                                                  | - Regiões paralelas dentro da abordagem fork-join |
+|                   |                                                                                                   |                                                                                                                                                              | - Experimento: os parâmentos levados em consideração para aplicação são: taxa de hit dos diferentes níveis de cache, operações de ponto-flutuante (FP) sob a memória e a media de computação de operações sob FP e inteiro. |                                                                    |                                                                                                                                                                                                                         |                                                                                                                                                                                  |                                                   |
+|                   |                                                                                                   |                                                                                                                                                              | - A plataforma de execução escolhida por eles *permite a alteração da frequência independentemente de cada core* (frequências avaliadas no experimento 1.6, 1.73, 1.86, 2, 2.13, 2.26, 2.39 e 2.40 GHz).                      |                                                                    |                                                                                                                                                                                                                         |                                                                                                                                                                                  |                                                   |
+|-------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------|
 
 - Alguns trabalhos possíveis: 
 *** Caracterização de aplicações paralelas implementadas em OpenMP
@@ -75,7 +59,7 @@ Esse documento está em pt-br
   partir da informação obtida o desenvolvedor poderá otimizar alguma
   parte da sua aplicação.
 * [19:10:05; 05.07.2016] Reunião Semanal com o Professor Lucas :Gabriel:Lucas:
-** Definiçãoo do assunto da dissertação
+** Definição do assunto da dissertação
 	=Objetivo=: Detectar as fases da aplicação utilizando contadores
 	de hardware.
 
@@ -128,9 +112,9 @@ ls | grep -i papi.h
 : fpapi.h
 : papi.h
 
-** Instalaçao do Scorep
+** Instalação do Scorep
 
-- Um dos pre-requisitos de instalaÃ§ao do Scorep e a instalaÃ§ao do
+- Um dos pré-requisitos de instalação do Scorep e a instalação do
   =Qt_app=.
 
 #+begin_src sh :results output :exports both
@@ -563,7 +547,7 @@ ferramenta =otf2print= disponibilizada pelo =scorep=.
 ** Exportando o arquivo csv por thread
 Primeiramente vou fazer um script teste para gerar o csv do arquivo
 gerado na execução da versão =normal_par= com =80= de entrada. O script
-vai ser criado em python, porque como sÃ£o muitos dado
+vai ser criado em python, porque como são muitos dado
 
 #+begin_src sh :results output :exports both
 cd benchmarks/MM/exec_normal_par80/
@@ -587,7 +571,7 @@ chmod 777 exec*
 
 #+RESULTS:
 
-- Vou tentar novamente com as permissÃµes alteradas
+- Vou tentar novamente com as permissões alteradas
 
 #+begin_src sh :results output :exports both
 cd benchmarks/MM/exec_normal_par80/
@@ -868,7 +852,7 @@ head(df);
 
 O tempo desapareceu das medidas (imagino que ele deveria ser
 mantido). Para tentar entender melhor o que foi feito, vamos olhar
-para apenas uma thread e uma Ãºnica mÃ©trica.
+para apenas uma thread e uma única métrica.
 
 #+begin_src R :results output :session :exports both
 head(df[df$thread == 1 & df$hardwareCounter == "PAPI_L1_DCM",]);
@@ -1023,14 +1007,3 @@ A ferramenta ReDFST parece que rastrea alguns contadores (não tenho
 total certeza), e me parece também que ela detectaria. Mas os valores
 de contadores obtidos são sempre globais. O que queremos é a evolução
 do valor dos contadores _ao longo do tempo_.
-
-* [14:13:14; 19.07.2016] Adicionar coluna de tempo ao CSV
-
-#+begin_src sh :results output :exports both
-cd benchmarks/MM/exec_continuos_par80/
-#+end_src
-
-#+RESULTS:
-: graph.pdf
-: threadAnalyseOutput.csv
-
